# hermit-rust

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
_implants/cpp/: messagebox.cpp
docs/: README.md  config.toml
docs/content/docs/: _index.md  agent.md  c2-client.md  c2-server.md  getting-started.md  implant.md  installation.md  listener.md  overview.md  prerequisites.md  tutorial.md
docs/sass/: style.scss
docs/static/: hamburger.js
docs/templates/: about.html  base.html  doc.html  docs.html  index.html
implants/: Cargo.toml  README.md  build.rs
implants/cpp/: hello.cpp  messagebox.cpp
implants/powershell/: payload.ps1
implants/resources/: syscall_ids
implants/src/: agents.rs  config.rs  core.rs  handlers.rs  main.rs  systeminfo.rs  tasks.rs  utils.rs
implants/src/config/: config.rs  listener.rs
implants/src/core/: agents.rs  handlers.rs  linux.rs  postdata.rs  run_linux.rs  run_windows.rs  syscalls.rs  systeminfo.rs  tasks.rs  win.rs
implants/src/core/evasion/: win.rs
implants/src/core/evasion/win/: dll.rs
implants/src/core/handlers/: win.rs
implants/src/core/handlers/win/: async_handler.rs  handler.rs
implants/src/core/syscalls/: win.rs
implants/src/core/syscalls/win/: ntdll.rs  syscalls.rs
implants/src/core/tasks/: screenshot.rs  win.rs
implants/src/core/tasks/linux/: shell.rs
implants/src/core/tasks/win/: shell.rs  shellcode.rs
implants/src/crypto/: aesgcm.rs
implants/src/handlers/: async_handlers_windows.rs  handlers_windows.rs
implants/src/systeminfo/: systeminfo_windows.rs
implants/src/tasks/: linux.rs  win.rs
implants/src/tasks/win/: screenshot.rs  shell.rs
implants/src/utils/: datetime.rs  random.rs
protobufs/: README.md  pb_agenttasks.proto  pb_common.proto  pb_hermitrpc.proto  pb_operations.proto
src/: banner.rs  clean.rs  client.rs  config.rs  main.rs  server.rs  utils.rs
src/client/: client.rs  handlers.rs  operations.rs  options.rs  prompt.rs
src/client/cli/: cmd.rs
src/client/handlers/: agent.rs  common.rs  implant.rs  listener.rs  operator.rs
src/client/options/: agent.rs  implant.rs  listener.rs  operator.rs  options.rs  task.rs
src/implants/: generate.rs  implant.rs
src/server/: agents.rs  db.rs  grpc.rs  handlers.rs  implants.rs  jobs.rs  listeners.rs  operators.rs  postdata.rs  server.rs  sessions.rs
src/server/certs/: https.rs
src/server/crypto/: aesgcm.rs
src/server/db/: agents.rs  db.rs  implants.rs  keypair.rs  listeners.rs  operators.rs
src/server/handlers/: agent.rs  implant.rs  listener.rs  operator.rs  task.rs
src/server/implants/: generate.rs  implant.rs
src/server/listeners/: http.rs  https.rs  listener.rs
src/server/listeners/https/: handlers.rs  helpers.rs  listener.rs
src/utils/: datetime.rs  fs.rs  random.rs  str.rs
