[package]
name = "hermit"
version = "0.0.0"
edition = "2021"
authors = ["hdks <hdks.bug@gmail.com>"]
license = "MIT"
description = "Command & Control, Post-Exploitation Framework"
readme = "README.md"
homepage = "https://github.com/hideckies/hermit"
keywords = ["c2", "post-exploitation"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.10.1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
log = "0.4.20"
rand = "0.8.5"
rustyline = "13.0.0"
shellwords = "1.1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["add-extension", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.0"
websocket = "0.27.0"
