[package]
name = "hermit"
version = "0.0.0"
edition = "2021"
authors = ["hdks <hdks.bug@gmail.com>"]
license = "MIT"
description = "Command & Control, Post-Exploitation Framework"
readme = "README.md"
homepage = "https://github.com/hideckies/hermit"
keywords = ["c2", "post-exploitation"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
cc = "1.0"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.10.1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
home = "0.5.9"
hyper = { version = "1.0", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
log = "0.4.20"
rand = "0.8.5"
rustyline = "13.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shellwords = "1.1.0"
spinners = "4.1.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["add-extension", "fs", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.0"
warp = "0.3"
websocket = "0.27.0"
