[package]
name = "hermit"
version = "0.0.0"
edition = "2021"
authors = ["hdks <hdks.bug@gmail.com>"]
license = "MIT"
description = "Command & Control, Post-Exploitation Framework"
readme = "README.md"
homepage = "https://github.com/hideckies/hermit"
keywords = ["c2", "post-exploitation"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
async-stream = "0.2"
axum = { version = "0.7.2", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
base64 = "0.21.6"
cc = "1.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.1.0"
data-encoding = "2.5.0"
env_logger = "0.10.1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
home = "0.5.9"
hyper = { version = "1.0", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
log = "0.4.20"
pad = "0.1.6"
pki-types = { package = "rustls-pki-types", version = "1" }
prost = "0.12"
rand = "0.8.5"
rcgen = { version = "0.12.0", features = ["pem", "x509-parser"] }
rustls = "0.22.1"
rustls-pemfile = "2.0.0"
rustyline = { version = "13.0.0", features = ["custom-bindings", "derive"] }
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shellwords = "1.1.0"
spinners = "4.1.1"
time = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25.0"
tokio-stream = "0.1"
tokio-tungstenite = "0.20"
tonic = "0.10"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["add-extension", "fs", "trace", "timeout"] }
tower-service = "0.3.2"
url = "2.5.0"
warp = "0.3"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }


[build-dependencies]
tonic-build = "0.10"
