[package]
name = "implants"
version = "0.0.0"
edition = "2021"


[[bin]]
name = "implant"
path = "src/main.rs"


[dependencies]
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shellwords = "1.1.0"
tokio = { version = "1", features = ["full"] }


[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security_Authentication_Identity",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
]
