[package]
name = "implants"
version = "0.0.0"
edition = "2021"


[[bin]]
name = "implant"
path = "src/main.rs"


[dependencies]
aes-gcm-siv = "0.11.1"
data-encoding = "2.5.0"
rand = "0.8.5"
screenshots = "0.8.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shellwords = "1.1.0"
tokio = { version = "1", features = ["full"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }


[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Networking_WinHttp",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
] }
